write-review fixed on mobile

--- a/src/app/modals/write-review/write-review.component.scss
+++ b/src/app/modals/write-review/write-review.component.scss
@@ -7,6 +7,7 @@
     .splitter {
         display: grid;
         grid-template-columns: 1fr auto;
+        grid-template-rows: auto;
         form {
             margin-right: 20px;
             min-width: 300px;
@@ -24,23 +25,16 @@
 
 @media only screen and (max-width: 800px) {
     .modalContainer {
-        .header {
-            font-size: 24px;
-            font-weight: 500;
-            margin-bottom: 10px;
-        }
         .splitter {
-            display: grid;
             grid-template-columns: auto;
             grid-template-rows: auto auto;
-
+            
             .imgContainer {
                 justify-self: center;
-                width: 50%;
-    
-                img {
-                    width: 100%;
-                }
+            }
+             
+            button {
+                justify-self: center;
             }
         }
     }    
