--- a/src/app/review-list/review-list.component.scss
+++ b/src/app/review-list/review-list.component.scss
@@ -10,7 +10,9 @@
     background: #e0e0eb;
     
     margin-top: 10px;
-    padding: 5px;
+    padding: 10px;
+
+    color: black;
 
     .author {
         grid-area: author;
